# agent-guard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  package-lock.json  package.json  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/agentguard-auth/: Cargo.toml
crates/agentguard-auth/src/: api_key.rs  dpop.rs  error.rs  jti.rs  jwt.rs  key_registry.rs  lib.rs  oidc.rs  spiffe.rs
crates/agentguard-cli/: Cargo.toml
crates/agentguard-cli/src/: main.rs
crates/agentguard-cli/src/commands/: audit.rs  authorize.rs  delegate.rs  doctor.rs  gen.rs  init.rs  log.rs  mod.rs  schema.rs  sim.rs  validate.rs
crates/agentguard-cli/tests/: cli_smoke.rs
crates/agentguard-core/: Cargo.toml
crates/agentguard-core/benches/: authorize.rs
crates/agentguard-core/proptest-regressions/: delegation.txt
crates/agentguard-core/proptest-regressions/decision/: canonical.txt
crates/agentguard-core/src/: action.rs  auth_keys.rs  authorize.rs  chain_secret.rs  context.rs  decision.rs  delegation.rs  error.rs  ids.rs  jwk.rs  lib.rs  policy.rs  principal.rs  request.rs  resource.rs  schema.rs  simulate.rs  ttl.rs
crates/agentguard-core/src/authorize/: engine.rs  entities.rs  mod.rs
crates/agentguard-core/src/decision/: cache.rs  canonical.rs  chain.rs  formatter.rs  log.rs  mod.rs  record.rs
crates/agentguard-core/src/delegation/: claims.rs  glob.rs
crates/agentguard-core/src/observability/: mod.rs  span.rs
crates/agentguard-core/src/policy/: init.rs  loader.rs  mod.rs  store.rs  types.rs
crates/agentguard-policy/: Cargo.toml
crates/agentguard-policy/src/: blast_radius.rs  diff.rs  lib.rs  version.rs  watcher.rs
crates/agentguard-server/: Cargo.toml  build.rs
crates/agentguard-server/proto/: agentguard.proto
crates/agentguard-server/src/: auth_layer.rs  authzen.rs  grpc.rs  lib.rs  listener.rs  main.rs  proto.rs  server.rs
crates/agentguard-server/tests/: authzen.rs  grpc_smoke.rs
crates/agentguard-telemetry/: Cargo.toml
crates/agentguard-telemetry/src/: lib.rs  metrics.rs  sink.rs
crates/agentguard-telemetry/src/sinks/: jsonl.rs  mod.rs  otlp.rs  stdout.rs
docs/: architecture.md  getting-started.md  known-duplicates.md
docs/adr/: 001-audit-log-chain.md  002-dual-transport.md  003-cedar.md
docs/operations/: runbook.md
examples/: sdk-smoke-test.py
examples/basic-tool-authz/: README.md  main.py  request.json
examples/dpop-protected/: main.py
examples/hash-chain-verify/: .chain-secret  main.py
examples/jwt-auth/: main.py
examples/multi-agent-delegation/: README.md  main.py
examples/nl-policy-gen/: README.md  main.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: canonical_json.rs  glob_match.rs  hash_chain_append.rs
python/agentguard/: README.md  pyproject.toml
python/agentguard/src/agentguard/: __init__.py  cli.py  client.py  errors.py  models.py  trace.py
python/agentguard_langchain/: pyproject.toml
python/agentguard_langchain/src/agentguard_langchain/: __init__.py
schemas/: starter.cedarschema
stages/: README.md  STAGE-0-style-and-architecture.md  STAGE-1-telemetry.md  STAGE-2-decision-log-hash-chain.md  STAGE-3-auth.md  STAGE-4-delegation-v2.md  STAGE-5-ttl-and-cache.md  STAGE-6-policy-ops.md  STAGE-7-server.md  STAGE-8-sdk-updates.md  STAGE-9-ci-and-tooling.md
typescript/agentguard/: package.json  tsconfig.json
typescript/agentguard/src/: index.ts  trace.ts
