[workspace]
resolver = "2"
members = [
    "crates/agentguard-core",
    "crates/agentguard-cli",
    "crates/agentguard-telemetry",
    "crates/agentguard-auth",
    "crates/agentguard-policy",
    "crates/agentguard-server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sachncs/agent-guard"

[workspace.dependencies]
cedar-policy = "4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
humantime = "2"
parking_lot = "0.12"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true