[package]
name = "agentguard-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication for agentguard: JWT, OIDC, API keys, DPoP, SPIFFE"

[features]
default = ["api-keys", "reqwest"]
api-keys = ["dep:argon2", "dep:rand"]
reqwest = ["dep:reqwest"]
spiffe = ["dep:rust-spiffe"]

[dependencies]
agentguard-core = { path = "../agentguard-core", version = "0.2.0" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest = { workspace = true, optional = true, features = ["json", "rustls-tls"] }
chrono.workspace = true
humantime.workspace = true
uuid.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
rand = { workspace = true, optional = true }

argon2 = { version = "0.5", optional = true }
rust-spiffe = { version = "0.5", optional = true, package = "spiffe" }
subtle.workspace = true

# Workspace lint policy (see /Cargo.toml).
[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
