[package]
name = "agentguard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cedar-powered authorization CLI for AI agents"

[[bin]]
name = "agentguard"
path = "src/main.rs"

[dependencies]
agentguard-core = { path = "../agentguard-core", version = "0.2.0" }
cedar-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

# Workspace lint policy (see /Cargo.toml).
[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
