[package]
name = "agentguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Cedar-powered authorization library for AI agents"

[dependencies]
cedar-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
indexmap.workspace = true
walkdir.workspace = true
parking_lot.workspace = true
humantime.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
lru = "0.12"

[dev-dependencies]
tempfile = "3"