[package]
name = "agentguard-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy operations: versioned bundles, hot reload, diff, blast radius"

[dependencies]
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
similar = "2"
tracing.workspace = true