[package]
name = "agentguard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AuthZEN HTTP + gRPC PDP server (sidecar mode)"

[[bin]]
name = "agentguard-server"
path = "src/main.rs"

[dependencies]
agentguard-core = { path = "../agentguard-core", version = "0.2.0" }
agentguard-auth = { path = "../agentguard-auth", version = "0.2.0" }
agentguard-policy = { path = "../agentguard-policy", version = "0.2.0" }
agentguard-telemetry = { path = "../agentguard-telemetry", version = "0.2.0" }

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1", features = ["server", "http1"] }
tonic = "0.12"
prost = "0.13"
uuid.workspace = true
parking_lot.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
cedar-policy.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"