[package]
name = "agentguard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AuthZEN HTTP + gRPC PDP server (sidecar mode)"

[[bin]]
name = "agentguard-server"
path = "src/main.rs"

[dependencies]
agentguard-core = { path = "../agentguard-core", version = "0.2.0" }
agentguard-auth = { path = "../agentguard-auth", version = "0.2.0" }
agentguard-policy = { path = "../agentguard-policy", version = "0.2.0" }
agentguard-telemetry = { path = "../agentguard-telemetry", version = "0.2.0" }

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
axum = "0.7"
tower = "0.5"
hyper = { version = "1", features = ["server", "http1"] }
uuid.workspace = true
parking_lot.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
cedar-policy.workspace = true

# gRPC: tonic + prost for the AccessEvaluation service. The build
# script regenerates the Rust types from proto/agentguard.proto.
tonic = { version = "0.12", default-features = false, features = ["transport", "server", "tls", "codegen", "prost"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }

# Workspace lint policy (see /Cargo.toml).
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Allow pedantic lints globally - they would require a separate
# cleanup commit to address. Track in a follow-up issue.
pedantic = "allow"
