[package]
name = "agentguard-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pluggable observability layer for agentguard — Sink trait, OTel/OTLP, Prometheus metrics"

[features]
default = ["jsonl", "stdout"]
jsonl = []
stdout = []
otlp = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

opentelemetry = { version = "0.24", optional = true, default-features = false, features = ["trace", "metrics"] }
parking_lot.workspace = true
opentelemetry_sdk = { version = "0.24", optional = true, default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", optional = true, default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = { version = "0.25", optional = true }

[dependencies.uuid]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Workspace lint policy (see /Cargo.toml).
[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
