[project]
name = "agentguard"
version = "0.1.0"
description = "Cedar-powered authorization for AI agents (Python SDK)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "agentguard" }]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
]

[project.scripts]
agentguard-py = "agentguard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]